feat: add sentry config
